# CMake file for integration tests

add_subdirectory(random)
add_subdirectory(mutator-no-log-sync)
add_subdirectory(commit-log-gc)
add_subdirectory(load-exception-after-split)
add_subdirectory(metadata-split)
add_subdirectory(multiple-maintenance-threads)
add_subdirectory(row-overflow)
add_subdirectory(rowkey-ag-imbalance)
#add_subdirectory(scan-concurrency)
add_subdirectory(sequential-load)
add_subdirectory(split-recovery)
add_subdirectory(split-merge-loop10)
add_subdirectory(bloomfilter)
add_subdirectory(scan-limit)
add_subdirectory(thrift-reconnect-hyperspace)
